kubernetes.yaml
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: kubemen
  labels:
    app: kubemen
  namespace: default
webhooks:
- name: kubemen.numberly.com
  failurePolicy: Ignore
  rules:
  - operations: ["CREATE", "UPDATE", "DELETE"]
    apiGroups: ["*"]
    apiVersions: ["*"]
    resources: [
    "cronjobs",
    "daemonsets",
    "deployments",
    "events",
    "horizontalpodautoscalers",
    "ingresses",
    "jobs",
    "pods",
    "replicasets",
    "replicationcontrollers",
    "services",
    "statefulsets",
    "certificates",
    "configmaps",
    "endpoints",
    "limitranges",
    "networkpolicies",
    "persistentvolumeclaims",
    "resourcequotas",
    "rolebindings",
    "roles",
    "secrets",
    "serviceaccounts"
    ]
    scope: "Namespaced"
  clientConfig:
    url: "https://kubemen.numberly.com"
  admissionReviewVersions:
  - v1beta1
  timeoutSeconds: 1

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubemen
  labels:
    app: kubemen
  namespace: default
spec:
  selector:
    matchLabels:
      app: kubemen
  template:
    metadata:
      name: kubemen
      labels:
        app: kubemen
    spec:
      securityContext:
        runAsUser: 65534 # nobody
      containers:
      - name: kubemen
        image: numberly/kubemen
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /
            port: 8000
        livenessProbe:
          httpGet:
            path: /
            port: 8000
        resources:
          limits:
            cpu: 50m
            memory: 64Mi
          requests:
            cpu: 50m
            memory: 64Mi

---
apiVersion: v1
kind: Service
metadata:
  name: kubemen
  labels:
    app: kubemen
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: kubemen
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubemen
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
  labels:
    app: kubemen
  namespace: default
spec:
  rules:
  - host: kubemen.numberly.com
    http:
      paths:
      - backend:
          serviceName: kubemen
          servicePort: 80
  tls:
  - hosts:
    - kubemen.numberly.com
    secretName: tls-kubemen
